# locallibrary

./: .envrc  db.sqlite3  pyproject.toml  requirements.txt
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language.py  0003_language_book.py  0004_auto_20210409_1223.py  0005_bookinstance_borrower.py  0006_alter_bookinstance_options.py  0007_alter_author_date_of_death.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html  bookinstance_list_all_borrowed.html  bookinstance_list_borrowed_user.html
catalog/tests/: test_models.py  test_views.py
locallibrary/: settings.py  urls.py
