[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = ""
authors = ["Nathan Dias <nathan.dias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
